<?xml version="1.0" encoding="utf-8"?>
<TableLayout 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" 
	xmlns:android="http://schemas.android.com/apk/res/android">
	<TableRow>
		<TextView
	    	android:text=" "
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_column="1" />
    		<EditText
    		android:id="@+id/bank_card_Name"
    		android:hint="@string/banknameDefault"
	    	android:layout_height="wrap_content"
	    	android:inputType="text|textCapWords" 
	    	android:width="300px"
	    	/>
	</TableRow>
	<TableRow>
		<TextView
	    	android:text="  "
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_column="1" />
    		<EditText
    		android:id="@+id/card_no"
    		android:hint="@string/cardnoDefault"
	    	android:width="300px"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:inputType="text" /> 
	</TableRow>
	<TableRow>
		<TextView
	    	android:text="  "
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_column="1" />
    		<EditText
    		android:id="@+id/secretPin_no"
    		android:hint="@string/cardsecretDefault"
	    	android:width="300px"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:inputType="text" /> 
	</TableRow>
	
		<TableRow>
		<TextView
	    	android:text="  "
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_column="1" />
    		<EditText
    		android:id="@+id/cardNotes"
    		android:hint="@string/banknotesDefault"
	    	android:width="300px"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:inputType="text" /> 
	</TableRow>
	
	     
	
	
	<TableLayout>
	<TableRow>
		<Button 
	    	android:id="@+id/savecardbutton"
	    	android:text="Save"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" />
	    <Button 
	    	android:id="@+id/cancelcardbutton"
	    	android:text="Cancel"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" />
	</TableRow>
	</TableLayout>
</TableLayout>